fix icon cutoff

--- a/packages/assets/scss/03-organisms/_utility-nav.scss
+++ b/packages/assets/scss/03-organisms/_utility-nav.scss
@@ -419,12 +419,8 @@ $utility-nav-height: 43px;
 
     & > svg {
       height: 20px;
-      margin-right: 10px;
-      width: 20px;
-
-      &.svg-login {
-        width: 25px;
-      }
+      margin-right: 5px;
+      width: 25px;
     }
   }
 }
